# os

./: .gitignore  Cargo.toml  README.md  build.py  x86_64-unknown-uefi.json
.cargo/: config  config.toml
OVMF/: OVMF_CODE.fd
src/: acpi.rs  int.rs  kmain.rs  lib.rs  main.rs  uefi_main.rs
src/console/: log.rs  mod.rs  uart.rs  uefifb.rs
src/drivers/: acpi.rs  fb.rs  mod.rs  uefifb.rs
src/drivers/console/: fbterm.rs  mod.rs  uart.rs
src/kernel/: acpi.rs  mod.rs
src/kernel/console/: log.rs  mod.rs  uefifb.rs
src/mm/: mod.rs  page.rs
test/: uefi_init.rs
tests/: panic_handler.rs  uefi_init.rs
