[package]
name = "os"
version = "0.1.1"
description = "A Operating System."
keywords = ["system", "uefi", "os"]
license = "GPL v3"
authors = ["韩朴宇 <w12101111@gmail.com>"]
repository = "https://github.com/12101111/os"
homepage = "https://github.com/12101111/os"
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
lazy_static = {version = "1" ,features =["spin_no_std"]}
spin = "0.5"

uefi = { git =  "https://github.com/rust-osdev/uefi-rs.git" }
x86_64 = "0.7"

fbterm = { git = "https://github.com/12101111/fbterm"}
uart_16550 = { git = "https://github.com/12101111/uart_16550"}

[package.metadata.bootuefi]
qemu = "qemu-system-x86_64"
bios = "OVMF.fd"
run-args = []
test-args = ["-device","isa-debug-exit,iobase=0xf4,iosize=0x04","-nographic","-serial","stdio"]
test-success-exit-code = 33
test-timeout = 300

[profile.dev]
lto = true

[profile.release]
lto = true
