[package]
name = "os"
version = "0.2.0"
description = "A Operating System."
keywords = ["system", "uefi", "os"]
license = "GPL v3"
authors = ["韩朴宇 <w12101111@gmail.com>"]
repository = "https://github.com/12101111/os"
homepage = "https://github.com/12101111/os"
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
#lazy_static = {version = "1" ,features =["spin_no_std"]}
spin = "0.5"
staticvec = { version = "0.6", default-features = false }

uefi = "0.4"
x86_64 = "0.8"
acpi = "0.4"

fbterm = { git = "https://github.com/12101111/fbterm"}
uart_16550 = { git = "https://github.com/12101111/uart_16550"}

[package.metadata.bootuefi]
qemu = "qemu-system-x86_64"
bios = "OVMF.fd"
run-args = ["-monitor","vc","-m","256M"]
test-args = ["-device","isa-debug-exit,iobase=0xf4,iosize=0x04","-nographic","-serial","stdio"]
test-success-exit-code = 33
test-timeout = 300

[profile.dev]
lto = true

[profile.release]
lto = true
